--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "react": "^16.8.4",
+    "react-beautiful-dnd": "^10.1.0",
     "react-dom": "^16.8.4"
   }
 }
