--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
@@ -21,6 +24,9 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@types/react": "^16.8.8",
+    "@types/react-beautiful-dnd": "^10.1.0",
+    "@types/react-dom": "^16.8.2",
     "react": "^16.8.4",
     "react-beautiful-dnd": "^10.1.0",
     "react-dom": "^16.8.4"
