--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open",
+    "start": "webpack --mode development && python3 backend/keyserver.py",
+    "devstart": "webpack-dev-server --config ./webpack.config.js --mode development --open",
     "build": "webpack --mode development",
     "watch": "webpack --mode development --watch"
   },
